--- a/mymaps/sharkspotters.html
+++ b/mymaps/sharkspotters.html
@@ -3,9 +3,9 @@
   <!-- Template for submission of SharkSpotters Google MyMaps activity 2022. 
        Modify the SRC Url with the embed link and test this page to be sure it functions as expected. 
        Submit this page's URL (not the embed url) when asked during your practical lab -->
-  <!-- The public URL of this on GitHub pages will be 
+  <!-- The public URL of this on GitHub pages will be -->
        https://ashishks-28.github.io/pl1/mymaps/https://www.google.com/maps/d/u/0/embed?mid=1YxqYK25NpyHmvCfkKyBk0EL-hRplG3I&ehbc=2E312F.html 
-       where [USERNAME] is replaced your github username -->
+  <!-- where [USERNAME] is replaced your github username -->
   <head>
     <style>
       body {font-family: "Trebuchet MS","sans-serif";}    
