--- a/mymaps/sharkspotters.html
+++ b/mymaps/sharkspotters.html
@@ -3,9 +3,9 @@
   <!-- Template for submission of SharkSpotters Google MyMaps activity 2022. 
        Modify the SRC Url with the embed link and test this page to be sure it functions as expected. 
        Submit this page's URL (not the embed url) when asked during your practical lab -->
-  <!-- The public URL of this on GitHub pages will be -->
+  <!-- The public URL of this on GitHub pages will be
        https://ashishks-28.github.io/pl1/mymaps/www.google.com/maps/d/u/0/embed?mid=1YxqYK25NpyHmvCfkKyBk0EL-hRplG3I&ehbc=2E312F.html 
-  <!-- where [USERNAME] is replaced your github username -->
+  where [USERNAME] is replaced your github username -->
   <head>
     <style>
       body {font-family: "Trebuchet MS","sans-serif";}    
@@ -27,7 +27,7 @@
       https://www.google.com/earth/outreach/learn/visualize-your-data-on-a-custom-map-using-google-my-maps/#embed-your-map-5-5
       * Note: Be sure your shark spotters is shared with the public, or it won't be accessible to mark and you will not earn any marks. 
       -->
-    <iframe class="second-row" id="GoogleMyMaps" src="https://www.google.com/maps/d/u/0/embed?mid=1RtLOehNImRBoLOxm8wN_gq4Z5Ok&usp=sharing" title="Google MyMaps">
+    <iframe class="second-row" id="GoogleMyMaps" src="https://www.google.com/maps/d/embed?mid=1YxqYK25NpyHmvCfkKyBk0EL-hRplG3I&ehbc=2E312F" title="Google MyMaps">
     </iframe>
   </div>
 </body>
