--- a/services/simplemap.html
+++ b/services/simplemap.html
@@ -26,8 +26,8 @@
 
       function initMap() {
         map = new google.maps.Map(document.getElementById("map"), {
-          center: { lat: 26.795501, lng: 82.212586 },
-          zoom: 8,
+          center: { lat: 26°48', lng: 82°14'},
+          zoom: 16,
         });
       }
     </script>
