--- a/services/simplemap.html
+++ b/services/simplemap.html
@@ -26,7 +26,7 @@
 
       function initMap() {
         map = new google.maps.Map(document.getElementById("map"), {
-          center: { lat: 26°48', lng: 82°14'},
+          center: { lat:  26.795467°, lng:  82.212672°},
           zoom: 16,
         });
       }
