--- a/services/simplemap.html
+++ b/services/simplemap.html
@@ -26,7 +26,7 @@
 
       function initMap() {
         map = new google.maps.Map(document.getElementById("map"), {
-          center: { lat:  26.795467°, lng:  82.212672°},
+          center: { lat:26.795511, lng:82.212612},
           zoom: 16,
         });
       }
