--- a/story/code.html
+++ b/story/code.html
@@ -34,7 +34,7 @@
             // Flight path from New Delhi to Dubai
             const flightPath1 = new google.maps.Polyline({
                 path: [
-                    { lat: 28.6139, lng: 77.2090 }, // New Delhi Airport
+                    { lat: 23.075689, lng: 72.629740 }, // Sardar Vallabhbhai Patel Airport
                     { lat: 25.2532, lng: 55.3657 }, // Dubai Airport
                 ],
                 geodesic: true,
