--- a/story/mystory.html
+++ b/story/mystory.html
@@ -8,7 +8,7 @@
       src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDv3MGflguusDaLmV_-BUlmuoUI4EbM88ww&callback=initMap"
       defer>
     </script>
-    <script src="ms1"></script>
+    <script src="ms1.js"></script>
     <style>
         /* Always set the map height explicitly to define the size of the div
        * element that contains the map. */
