--- a/story/mystory.html
+++ b/story/mystory.html
@@ -8,7 +8,6 @@
       src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDv3MGflguusDaLmV_-BUlmuoUI4EbM88ww&callback=initMap"
       defer>
     </script>
-    <script src="ms1.js"></script>
     <style>
         /* Always set the map height explicitly to define the size of the div
        * element that contains the map. */
@@ -24,6 +23,35 @@
         padding: 0;
         }
     </style>
+      <script>function initMap() {
+  const map = new google.maps.Map(document.getElementById("map"), {
+    zoom: 5,
+    center: { lat:23.796846, lng:78.657571}, 
+  });
+  // Create an array of alphabetical characters used to label the markers.
+  const labels = "123";
+  // Add some markers to the map.
+  // Note: The code uses the JavaScript Array.prototype.map() method to
+  // create an array of markers based on a given "locations" array.
+  // The map() method here has nothing to do with the Google Maps API.
+  const markers = locations.map((location, i) => {
+    return new google.maps.Marker({
+      position: location,
+      label: labels[i % labels.length],
+    });
+  });
+  // Add a marker clusterer to manage the markers.
+  new MarkerClusterer(map, markers, {
+    imagePath:
+      "https://developers.google.com/maps/documentation/javascript/examples/markerclusterer/m",
+  });
+}
+const locations = [
+  { lat: 20.888035, lng: -70.401030},
+{ lat: 22.335924, lng: 69.087023},
+{ lat: 23.193696, lng: 75.790858},
+];
+</script>
 
   </head>
   <body>
