--- a/story/STORY1.html
+++ b/story/STORY1.html
@@ -1,110 +1,65 @@
 <!DOCTYPE html>
-<!--
- @license
- Copyright 2019 Google LLC. All Rights Reserved.
- SPDX-License-Identifier: Apache-2.0
--->
-<html>
-  <head>
-    <title>Complex Marker Icons</title>
-    <script src="https://polyfill.io/v3/polyfill.min.js?features=default"></script>
-    <script>
-      /**
-       * @license
-       * Copyright 2019 Google LLC. All Rights Reserved.
-       * SPDX-License-Identifier: Apache-2.0
-       */
-      // The following example creates complex markers to indicate beaches near
-      // Sydney, NSW, Australia. Note that the anchor is set to (0,32) to correspond
-      // to the base of the flagpole.
-      function initMap() {
-        const map = new google.maps.Map(document.getElementById("map"), {
-          zoom: 10,
-          center: { lat: 44.360596, lng: -78.737636 },
-        });
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>12 Jyotirlingas Map</title>
+  <style>
+    /* Internal CSS styles */
+    body {
+      margin: 0;
+      padding: 0;
+    }
+    
+    #map {
+      height: 100vh;
+      width: 100%;
+    }
+  </style>
+</head>
+<body>
+  <div id="map"></div>
 
-        setMarkers(map);
-      }
+  <script>
+    // External JavaScript
+    function initMap() {
+      var mapOptions = {
+        zoom: 5,
+        center: { lat: 22.9734, lng: 78.6569 }, // Center of India
+      };
 
-      // Data for the markers consisting of a name, a LatLng and a zIndex for the
-      // order in which these markers should display on top of each other.
-      const beaches = [
-        ["Bondi Beach", 44.358625, -78.734882],
-        ["Coogee Beach", -33.923036, 151.259052, 5],
-        ["Cronulla Beach", -34.028249, 151.157507, 3],
-        ["Manly Beach", -33.80010128657071, 151.28747820854187, 2],
-        ["Maroubra Beach", -33.950198, 151.259302, 1],
+      var map = new google.maps.Map(document.getElementById('map'), mapOptions);
+
+      // Coordinates of the 12 Jyotirlingas
+      var jyotirlingaLocations = [
+        { name: 'Kedarnath', location: { lat: 30.7348, lng: 79.0662 } },
+        { name: 'Kashi Vishwanath', location: { lat: 25.3089, lng: 83.0100 } },
+        { name: 'Somnath', location: { lat: 20.8840, lng: 70.4056 } },
+        { name: 'Trimbakeshwar', location: { lat: 19.9336, lng: 73.5387 } },
+        { name: 'Bhimashankar', location: { lat: 19.0628, lng: 73.5295 } },
+        { name: 'Baidyanath Jyotirlinga', location: { lat: 24.7790, lng: 86.9817 } },
+        { name: 'Rameshwar', location: { lat: 9.2885, lng: 79.3129 } },
+        { name: 'Grishneshwar', location: { lat: 20.0255, lng: 75.1852 } },
+        { name: 'Mallikarjuna', location: { lat: 14.0129, lng: 79.7400 } },
+        { name: 'Mahakaleshwar', location: { lat: 23.1905, lng: 75.7774 } },
+        { name: 'Nageshwar Jyotirlinga', location: { lat: 22.7334, lng: 68.7705 } },
+        { name: 'Aundha Nagnath', location: { lat: 19.5813, lng: 76.3929 } }
       ];
 
-      function setMarkers(map) {
-        // Adds markers to the map.
-        // Marker sizes are expressed as a Size of X,Y where the origin of the image
-        // (0,0) is located in the top left of the image.
-        // Origins, anchor positions and coordinates of the marker increase in the X
-        // direction to the right and in the Y direction down.
-        const image = {
-          url: "https://developers.google.com/maps/documentation/javascript/examples/full/images/beachflag.png",
-          // This marker is 20 pixels wide by 32 pixels high.
-          size: new google.maps.Size(20, 32),
-          // The origin for this image is (0, 0).
-          origin: new google.maps.Point(0, 0),
-          // The anchor for this image is the base of the flagpole at (0, 32).
-          anchor: new google.maps.Point(0, 32),
-        };
-        // Shapes define the clickable region of the icon. The type defines an HTML
-        // <area> element 'poly' which traces out a polygon as a series of X,Y points.
-        // The final coordinate closes the poly by connecting to the first coordinate.
-        const shape = {
-          coords: [1, 1, 1, 20, 18, 20, 18, 1],
-          type: "poly",
-        };
-
-        for (let i = 0; i < beaches.length; i++) {
-          const beach = beaches[i];
-
-          new google.maps.Marker({
-            position: { lat: beach[1], lng: beach[2] },
-            map,
-            icon: image,
-            shape: shape,
-            title: beach[0],
-            zIndex: beach[3],
-          });
-        }
+      // Add markers for each Jyotirlinga
+      for (var i = 0; i < jyotirlingaLocations.length; i++) {
+        var marker = new google.maps.Marker({
+          position: jyotirlingaLocations[i].location,
+          map: map,
+          title: jyotirlingaLocations[i].name
+        });
       }
+    }
+  </script>
 
-      window.initMap = initMap;
-    </script>
-    <style>
-      /**
-       * @license
-       * Copyright 2019 Google LLC. All Rights Reserved.
-       * SPDX-License-Identifier: Apache-2.0
-       */
-      /* 
-        * Always set the map height explicitly to define the size of the div element
-        * that contains the map. 
-        */
-      #map {
-        height: 100%;
-      }
-
-      /* 
-      * Optional: Makes the sample page fill the window. 
-      */
-      html,
-      body {
-        height: 100%;
-        margin: 0;
-        padding: 0;
-      }
-    </style>
-  </head>
-  <body>
-    <div id="map"></div>
-    <script
-      src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDv3MGflguusDaLmV_-BUlmuoUI4EbM88w&callback=initMap&v=weekly"
-      defer
-    ></script>
-  </body>
+  <!-- Google Maps API script with your API key -->
+  <script async defer
+    src="https://maps.googleapis.com/maps/api/js?key=YOUR_GOOGLE_MAPS_API_KEY&callback=initMap">
+  </script>
+</body>
 </html>
