--- a/story/STORY1.html
+++ b/story/STORY1.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>12 Jyotirlingas Map</title>
+  <title>Temples I visited in India</title>
   <style>
     /* Internal CSS styles */
     body {
@@ -32,18 +32,13 @@
 
       // Coordinates of the 12 Jyotirlingas
       var jyotirlingaLocations = [
-        { name: 'Kedarnath', location: { lat: 30.7348, lng: 79.0662 } },
         { name: 'Kashi Vishwanath', location: { lat: 25.3089, lng: 83.0100 } },
         { name: 'Somnath', location: { lat: 20.8840, lng: 70.4056 } },
-        { name: 'Trimbakeshwar', location: { lat: 19.9336, lng: 73.5387 } },
-        { name: 'Bhimashankar', location: { lat: 19.0628, lng: 73.5295 } },
-        { name: 'Baidyanath Jyotirlinga', location: { lat: 24.7790, lng: 86.9817 } },
-        { name: 'Rameshwar', location: { lat: 9.2885, lng: 79.3129 } },
-        { name: 'Grishneshwar', location: { lat: 20.0255, lng: 75.1852 } },
-        { name: 'Mallikarjuna', location: { lat: 14.0129, lng: 79.7400 } },
         { name: 'Mahakaleshwar', location: { lat: 23.1905, lng: 75.7774 } },
-        { name: 'Nageshwar Jyotirlinga', location: { lat: 22.7334, lng: 68.7705 } },
-        { name: 'Aundha Nagnath', location: { lat: 19.5813, lng: 76.3929 } }
+        { name: 'Nageshwar Jyotirlinga', location: { lat: 22.335897, lng: 69.087054} }
+        { name: 'Dwarkadheesh Mandir', location: { lat: 22.237099, lng: 68.967627 } }
+        { name: 'Ambaji Mata Mandir', location: { lat: 24.335723, lng: 72.848168} }
+        { name: 'Pitambara Mata Mandir', location: { lat: 25.664752, lng: 78.462186} }
       ];
 
       // Add markers for each Jyotirlinga
