--- a/story/STORY1.html
+++ b/story/STORY1.html
@@ -35,9 +35,9 @@
         { name: 'Kashi Vishwanath', location: { lat: 25.3089, lng: 83.0100 } },
         { name: 'Somnath', location: { lat: 20.8840, lng: 70.4056 } },
         { name: 'Mahakaleshwar', location: { lat: 23.1905, lng: 75.7774 } },
-        { name: 'Nageshwar Jyotirlinga', location: { lat: 22.335897, lng: 69.087054} }
-        { name: 'Dwarkadheesh Mandir', location: { lat: 22.237099, lng: 68.967627 } }
-        { name: 'Ambaji Mata Mandir', location: { lat: 24.335723, lng: 72.848168} }
+        { name: 'Nageshwar Jyotirlinga', location: { lat: 22.335897, lng: 69.087054} },
+        { name: 'Dwarkadheesh Mandir', location: { lat: 22.237099, lng: 68.967627 } },
+        { name: 'Ambaji Mata Mandir', location: { lat: 24.335723, lng: 72.848168} },
         { name: 'Pitambara Mata Mandir', location: { lat: 25.664752, lng: 78.462186} }
       ];
 
