--- a/story/STORY1.html
+++ b/story/STORY1.html
@@ -36,9 +36,10 @@
         { name: 'Somnath', location: { lat: 20.8840, lng: 70.4056 } },
         { name: 'Mahakaleshwar', location: { lat: 23.1905, lng: 75.7774 } },
         { name: 'Nageshwar Jyotirlinga', location: { lat: 22.335897, lng: 69.087054} },
-        { name: 'Dwarkadheesh Mandir', location: { lat: 22.237099, lng: 68.967627 } },
         { name: 'Ambaji Mata Mandir', location: { lat: 24.335723, lng: 72.848168} },
-        { name: 'Pitambara Mata Mandir', location: { lat: 25.664752, lng: 78.462186} }
+        { name: 'Pitambara Mata Mandir', location: { lat: 25.664752, lng: 78.462186} },
+        { name: 'Omkareshwar Jyotirlinga', location: { lat: 22.245678, lng: 76.151108} },
+        { name: 'Rameshwaram Jyotirlinga', location: { lat: 9.288050, lng: 79.315899} }
       ];
 
       // Adds markers for each Temple
@@ -52,7 +53,7 @@
     }
   </script>
 
-  <!-- Google Maps API script with your API key -->
+  <!-- Google Maps API script-->
   <script async defer
     src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDv3MGflguusDaLmV_-BUlmuoUI4EbM88w&callback=initMap">
   </script>
