--- a/story/mystory1.html
+++ b/story/mystory1.html
@@ -27,7 +27,7 @@
     center: { lat: 22.9734, lng: 78.6569 },
     mapId: "4504f8b37365c3d0",
   }); 
-        // location of the temples
+        // Lat long of the Temples
   const tourStops = [
     {
       position: { lat: 25.3089, lng:83.0100 },
