--- a/story/mystory1.html
+++ b/story/mystory1.html
@@ -31,11 +31,11 @@
   const tourStops = [
     {
       position: { lat: 25.3089, lng:83.0100 },
-      title: "Kashi Vishwanath Jyotirlinga",
+      title: "Kashi Vishwanath Jyotirlinga- Varanasi, India. ",
     },
     {
       position: { lat: 25.664752, lng: 78.462186 },
-      title: "Pitambara Mata Mandir",
+      title: "Pitambara Mata Mandir- Datia, Madhya Pradesh, India.",
     },
      {
       position: { lat: 23.1905, lng:75.7774 },
