--- a/story/STORY1.html
+++ b/story/STORY1.html
@@ -100,7 +100,7 @@
   });
  
         // Set the polyline on the map.
-        polyline.setMap(map);
+      flightPath.setMap(map);
     }
  
     initMap();
