--- a/story/STORY1.html
+++ b/story/STORY1.html
@@ -31,6 +31,10 @@
         // Lat long of the Temples
         const tourStops = [
             {
+                position: { lat: 26.913741, lng: 80.937875 },
+                title: "Lucknow, Uttar Pradesh, India ",
+            },
+            {
                 position: { lat: 25.3089, lng: 83.0100 },
                 title: "Kashi Vishwanath Jyotirlinga- Varanasi, India. ",
             },
@@ -85,14 +89,18 @@
         });
  
         // Create a polyline to connect the markers.
-       const flightPlanCoordinates = [
+       const tourStops = [
+    { lat:  26.913741, lng: 80.937875 },
     { lat:  25.3089, lng: 83.0100 },
     { lat: 25.664752, lng:  78.462186 },
     { lat: 23.1905, lng: 75.7774 },
-    { lat: 22.2456782, lng: 76.151108 },
+    { lat: 22.2456782, lng: 76.151108 }
+    { lat: 20.8840, lng: 70.4056 } 
+    { lat: 22.335897, lng: 69.087054 } 
+    { lat: 24.335723, lng: 72.848168 }  ,
   ];
-      const flightPath = new google.maps.Polyline({
-       path: flightPlanCoordinates,
+      const tourPath = new google.maps.Polyline({
+       path: tourStops,
        geodesic: true,
        strokeColor: "#FF0000",
       strokeOpacity: 1.0,
