--- a/story/STORY1.html
+++ b/story/STORY1.html
@@ -100,7 +100,7 @@
     { lat: 24.335723, lng: 72.848168 },
   ];
       const tourPath = new google.maps.Polyline({
-       path: TourPathCoordinates,
+       path: tourPathCoordinates,
        geodesic: true,
        strokeColor: "#FF0000",
       strokeOpacity: 1.0,
