--- a/story/STORY1.html
+++ b/story/STORY1.html
@@ -89,14 +89,15 @@
         });
  
         // Create a polyline to connect the markers.
+
        const tourPathCoordinates = [
     { lat:  26.913741, lng: 80.937875 },
     { lat:  25.3089, lng: 83.0100 },
     { lat: 25.664752, lng:  78.462186 },
     { lat: 23.1905, lng: 75.7774 },
-    { lat: 22.2456782, lng: 76.151108 }
-    { lat: 20.8840, lng: 70.4056 } 
-    { lat: 22.335897, lng: 69.087054 } 
+    { lat: 22.2456782, lng: 76.151108 },
+    { lat: 20.8840, lng: 70.4056 }, 
+    { lat: 22.335897, lng: 69.087054 }, 
     { lat: 24.335723, lng: 72.848168 },
   ];
       const tourPath = new google.maps.Polyline({
