--- a/story/STORY1.html
+++ b/story/STORY1.html
@@ -98,12 +98,13 @@
     { lat: 22.2456782, lng: 76.151108 },
     { lat: 20.8840, lng: 70.4056 }, 
     { lat: 22.335897, lng: 69.087054 }, 
-    { lat: 24.335723, lng: 72.848168 },
+    { lat: 24.335723, lng: 72.848168 }, 
+    { lat:  26.913741, lng: 80.937875 },
   ];
       const tourPath = new google.maps.Polyline({
        path: tourPathCoordinates,
        geodesic: true,
-       strokeColor: "#FF0000",
+       strokeColor: "#FFFF00",
       strokeOpacity: 1.0,
       strokeWeight: 2,
   });
