--- a/story/STORY1.html
+++ b/story/STORY1.html
@@ -14,6 +14,21 @@
         margin: 0;
         padding: 0;
     }
+    h1{ 
+        height:
+        text-align:left
+            }
+    h2{
+        color:Red;
+        text-align:left;
+        Font-family:Sans Serif;
+    }
+    p{
+        margin:auto;
+        color:Black;
+        Font-family:Sans Serif;
+        Width:70%;
+    }
 </style>
 <script>
     async function initMap() {
@@ -118,6 +133,7 @@
 </head>
 <body>
 <div id="map"></div>
+<h1>Religious Tourism</h1>
 <!-- Async script executes immediately and must be after any DOM elements used in callback. -->
 <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDv3MGflguusDaLmV_-BUlmuoUI4EbM88w&callback=initMap&v=weekly" async></script>
 </body>
