--- a/story/STORY1.html
+++ b/story/STORY1.html
@@ -14,12 +14,13 @@
         margin: 0;
         padding: 0;
     }
-    h1{ 
-        height:
-        text-align:left
+    h1{ color:Red;
+        font-size:large;
+        text-align:center;
+        Font-family:Sans Serif;
             }
     h2{
-        color:Red;
+        color:Blue;
         text-align:left;
         Font-family:Sans Serif;
     }
@@ -59,23 +60,23 @@
             },
             {
                 position: { lat: 23.1905, lng: 75.7774 },
-                title: "Mahakaleshwar Jyotirlinga",
+                title: "Mahakaleshwar Jyotirlinga- Ujjain, Madhya Pradesh, India.",
             },
             {
                 position: { lat: 22.2456782, lng: 76.151108 },
-                title: "Omkareshwar Jyotirlinga",
+                title: "Omkareshwar Jyotirlinga- Omkareshwar, Madhya Pradesh, India.",
             },
             {
                 position: { lat: 20.8840, lng: 70.4056 },
-                title: "Somnath Jyotirlinga",
+                title: "Somnath Jyotirlinga- Gujarat, India.",
             },
             {
                 position: { lat: 22.335897, lng: 69.087054 },
-                title: "Nageshwar Jyotirlinga",
+                title: "Nageshwar Jyotirlinga- Gujarat, India.",
             },
             {
                 position: { lat: 24.335723, lng: 72.848168 },
-                title: "Ambaji Mata Mandir",
+                title: "Ambaji Mata Mandir- Gujarat, India.",
             },
         ];
  
@@ -132,7 +133,14 @@
 </script>
 </head>
 <body>
-<h1>Religious Tourism</h1>
+<h1>My FIRST RELIGIOUS TRIP</h1>
+<h2>Kashi Vishwanath Jyotirlinga- Varanasi, India</h2>
+<h2>Pitambara Mata Mandir- Datia, Madhya Pradesh, India</h2>
+<h2>Mahakaleshwar Jyotirlinga- Ujjain, Madhya Pradesh, India.</h2>
+<h2>Omkareshwar Jyotirlinga-Omkareshwar, Madhya Pradesh, India.</h2>
+<h2>Somnath Jyotirlinga- Gujarat, India.</h2>
+<h2>Nageshwar Jyotirlinga- Gujarat, India.</h2>
+<h2>Ambaji Mata Mandir- Gujarat, India.</h2>
     <div id="map"></div>
 <!-- Async script executes immediately and must be after any DOM elements used in callback. -->
 <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDv3MGflguusDaLmV_-BUlmuoUI4EbM88w&callback=initMap&v=weekly" async></script>
