--- a/story/STORY1.html
+++ b/story/STORY1.html
@@ -15,7 +15,7 @@
         padding: 0;
     }
     h1{ color:Red;
-        font-size:large;
+        font-size:32px;
         text-align:center;
         Font-family:Sans Serif;
             }
