--- a/story/STORY1.html
+++ b/story/STORY1.html
@@ -135,7 +135,7 @@
 </head>
 <body>
 <h1>My FIRST RELIGIOUS TRIP</h1>
-<h2>Kashi Vishwanath Jyotirlinga- Varanasi, India</h2>
+<h2><ol>Kashi Vishwanath Jyotirlinga- Varanasi, India</ol></h2>
 <h2>Pitambara Mata Mandir- Datia, Madhya Pradesh, India</h2>
 <h2>Mahakaleshwar Jyotirlinga- Ujjain, Madhya Pradesh, India.</h2>
 <h2>Omkareshwar Jyotirlinga-Omkareshwar, Madhya Pradesh, India.</h2>
