--- a/story/STORY1.html
+++ b/story/STORY1.html
@@ -134,7 +134,7 @@
 </script>
 </head>
 <body>
-<h1>MY FIRST RELIGIOUS TRIP</h1>
+<h1>DIVINE ODYSSEY: A PILGRIMAGE FROM AYODHYA TO AMBAJI</h1>
 <h2><ol>1. Shri Ram Janmabhumi Mandir- Ayodhya, Uttar Pradesh, India.</ol></h2>
 <h2><ol>2. Kashi Vishwanath Jyotirlinga- Varanasi, Uttar Pradesh, India.</ol></h2>
 <h2><ol>3. Pitambara Mata Mandir- Datia, Madhya Pradesh, India.</ol></h2>
