--- a/story/STORY1.html
+++ b/story/STORY1.html
@@ -25,6 +25,7 @@
         text-align:left;
         font-size:Medium;
         Font-family:Sans Serif;
+		margin-left:5%;
     }
     p{
         color:Black;
@@ -134,15 +135,15 @@
 </script>
 </head>
 <body>
-<h1>DIVINE ODYSSEY: A PILGRIMAGE FROM AYODHYA TO AMBAJI</h1>
-<h2><ol>1. Shri Ram Janmabhumi Mandir- Ayodhya, Uttar Pradesh, India.</ol></h2>
-<h2><ol>2. Kashi Vishwanath Jyotirlinga- Varanasi, Uttar Pradesh, India.</ol></h2>
-<h2><ol>3. Pitambara Mata Mandir- Datia, Madhya Pradesh, India.</ol></h2>
-<h2><ol>4. Mahakaleshwar Jyotirlinga- Ujjain, Madhya Pradesh, India.</ol></h2>
-<h2><ol>5. Omkareshwar Jyotirlinga-Omkareshwar, Madhya Pradesh, India.</ol></h2>
-<h2><ol>6. Somnath Jyotirlinga- Somnath, Gujarat, India.</h2>
-<h2><ol>7. Nageshwar Jyotirlinga- Porbandar, Gujarat, India.</h2>
-<h2><ol>8. Ambaji Mata Mandir- Banaskantha, Gujarat, India.</h2>
+<h1>DIVINE ODYSSEY: A PILGRIMAGE FROM AYODHYA TO AMBAJI </h1>
+<h2>1. Shri Ram Janmabhumi Mandir- Ayodhya, Uttar Pradesh, India.</h2>
+<h2>2. Kashi Vishwanath Jyotirlinga- Varanasi, Uttar Pradesh, India.</h2>
+<h2>3. Pitambara Mata Mandir- Datia, Madhya Pradesh, India.</h2>
+<h2>4. Mahakaleshwar Jyotirlinga- Ujjain, Madhya Pradesh, India.</h2>
+<h2>5. Omkareshwar Jyotirlinga-Omkareshwar, Madhya Pradesh, India.</h2>
+<h2>6. Somnath Jyotirlinga- Somnath, Gujarat, India.</h2>
+<h2>7. Nageshwar Jyotirlinga- Porbandar, Gujarat, India.</h2>
+<h2>8. Ambaji Mata Mandir- Banaskantha, Gujarat, India.</h2>
     <div id="map"></div>
 <!-- Async script executes immediately and must be after any DOM elements used in callback. -->
 <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCM-WWHYHIKY-do4kquMy9Z4wQaQx51AuE&callback=initMap&v=weekly" async></script>
